<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D9EDB"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/cittaSpinner"
        android:layout_width="224dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="190dp"
        android:entries="@array/citta_array"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/durataPar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="440dp"
        android:ems="10"
        android:hint="@string/durata"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/codice"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="76dp"
        android:text="@string/parcheggia"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonpaga"
        android:layout_width="159dp"
        android:layout_height="79dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="548dp"
        android:text="@string/paga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/indietro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-5dp"
        android:backgroundTint="#0D9EDB"
        android:tint="#090909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/freccia" />

</androidx.constraintlayout.widget.ConstraintLayout>